Fix spacing and style of coa box elements

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
        /* border: yellow solid 2px;*/
     }
 
-    button {
+    .topcol1 button {
         /*body params*/
         width: 30%;
         background-color: #3882f6;
@@ -95,6 +95,7 @@ body {
         font-size: 16px;
         font-weight: 600;
         color: white;
+        min-width: 75px;
     }
 
 .hero_img {
@@ -164,8 +165,49 @@ div[class^="card_"] {
     font-weight: bold;
 }
 
+.coa {
+  /*border: blue dotted 3px;*/
+  padding: 7%;
+} 
+
 .coa .container {
-    display: flex;
+  display: flex;
+  /*border: red solid 2px;*/
+  padding: 3%;
+  flex-wrap: wrap;
+  background-color: #3882f6;
+  border-radius: 4px;
+  justify-content: space-around;
+  gap: 1em;
+}
+
+.text_container {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  gap: 1em;
+  flex: 1;
+  min-width: 100px;
+  max-width: 50%;
+}
+
+.text_container .title {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.container button {
+  border: white solid 3px;
+  border-radius: 4px;
+  background-color: #3882f6;
+  font-weight: 600;
+  font-size: 16px;
+  color: white;
+  align-self: center;
+  flex-grow: 1;
+  min-width: 75px;
+  max-width: 200px;
+  padding: 1%;
 }
 
 .footer {
